# node-windows-printer

./: CMakeLists.txt  README.md  binding.gyp  build.bat  main.cpp  package-lock.json  package.json  test.bat
lib/base64/: base64.cpp  base64.h
lib/icu4c/lib64/: icuio.exp  icuio.lib  icutest.exp  icutest.lib  icutu.exp  icutu.lib
node/: test.js
printer/: printer.h
